Import of INGY/Test-Base-0.41 from CPAN.
gitpan-cpan-distribution: Test-Base
gitpan-cpan-version:      0.41
gitpan-cpan-path:         INGY/Test-Base-0.41.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.41
+date:    Sun Jun 12 15:49:15 PDT 2005
+changes:
+- Add first_block() function
+- Split Test::Base::Filter into a separate module
+---
 version: 0.40
 date:    Sat Jun 11 20:55:42 PDT 2005
 changes:
