--- a/README
+++ b/README
@@ -11,7 +11,7 @@ SYNOPSIS
         use MyProject;
     
         package MyProject::Test::Filter;
-        use base 'Test::Base::Filter';
+        use Test::Base::Filter -base;
 
         sub my_filter {
             return MyProject->do_something(shift);
@@ -28,7 +28,7 @@ SYNOPSIS
     
         __END__
     
-        === Test one (name of test goes here)
+        === Test one (the name of the test)
         --- input my_filter
         my
         input
@@ -65,7 +65,7 @@ DESCRIPTION
     A module called "MyTestFramework.pm" containing those two lines, will
     give all the power of Test::More and all the power of Test::Base to
     every test file that uses it. As you build up the capabilities of
-    "MyTestFramework", your tests will have all that power as well.
+    "MyTestFramework", your tests will have all of that power as well.
 
     "MyTestFramework" becomes a place for you to put all of your reusable
     testing bits. As you write tests, you will see patterns and duplication,
@@ -110,9 +110,9 @@ EXPORTED FUNCTIONS
     "description" method for accessing those parts of the block if they were
     specified.
 
-    "blocks" can take an optional single argument, that indicates to only
-    return the blocks that contain a particular named data section.
-    Otherwise "blocks" returns all blocks.
+    The "blocks" function can take an optional single argument, that
+    indicates to only return the blocks that contain a particular named data
+    section. Otherwise "blocks" returns all blocks.
 
         my @all_of_my_blocks = blocks;
 
@@ -127,6 +127,10 @@ EXPORTED FUNCTIONS
 
     It returns undef after all blocks have been iterated over. It can then
     be called again to reiterate.
+
+  first_block()
+    Returns the first block or undef if there are none. It resets the
+    iterator to the "next_block" function.
 
   run(&subroutine)
     There are many ways to write your tests. You can reference each block
@@ -210,7 +214,7 @@ EXPORTED FUNCTIONS
         use Test::Base;
         filters_delay;
         plan tests => 1 * blocks;
-        for my $block (@blocks) {
+        for my $block (blocks) {
             ...
             $block->run_filters;
             ok($block->is_filtered);
@@ -356,10 +360,10 @@ FILTERS
     format you can find, and let the filters translate it into what you
     really need for a test. It is easy to write your own filters as well.
 
-    Test::Base allows you to specify a list of filters. The default filters
-    are "norm" and "trim". These filters will be applied (in order) to the
-    data after it has been parsed from the specification and before it is
-    set into its Test::Base::Block object.
+    Test::Base allows you to specify a list of filters to each data section
+    of each block. The default filters are "norm" and "trim". These filters
+    will be applied (in order) to the data after it has been parsed from the
+    specification and before it is set into its Test::Base::Block object.
 
     You can add to the default filter list with the "filters" function. You
     can specify additional filters to a specific block by listing them after
@@ -415,154 +419,20 @@ FILTERS
 
     Data accessor methods for blocks will return a list of values when used
     in list context, and the first element of the list in scalar context.
-    This usually does the right thing, but be aware.
+    This is usually "the right thing", but be aware.
 
-  norm
-    scalar => scalar
+    head2 The Stock Filters
 
-    Normalize the data. Change non-Unix line endings to Unix line endings.
-
-  trim
-    list => list
-
-    Remove extra blank lines from the beginning and end of the data. This
-    allows you to visually separate your test data with blank lines.
-
-  chomp
-    list => list
-
-    Remove the final newline from each string value in a list.
-
-  unchomp
-    list => list
-
-    Add a newline to each string value in a list.
-
-  chop
-    list => list
-
-    Remove the final char from each string value in a list.
-
-  append
-    list => list
-
-    Append a string to each element of a list.
-
-        --- numbers lines chomp append=-#\n join
-        one
-        two
-        three
-
-  lines
-    scalar => list
-
-    Break the data into an anonymous array of lines. Each line (except
-    possibly the last one if the "chomp" filter came first) will have a
-    newline at the end.
-
-  array
-    list => scalar
-
-    Turn a list of values into an anonymous array reference.
-
-  join
-    list => scalar
-
-    Join a list of strings into a scalar.
-
-  eval
-    scalar => list
-
-    Run Perl's "eval" command against the data and use the returned value as
-    the data.
-
-  eval_stdout
-    scalar => scalar
-
-    Run Perl's "eval" command against the data and return the captured
-    STDOUT.
-
-  eval_stderr
-    scalar => scalar
-
-    Run Perl's "eval" command against the data and return the captured
-    STDERR.
-
-  eval_all
-    scalar => list
-
-    Run Perl's "eval" command against the data and return a list of 4
-    values:
-
-        1) The return value
-        2) The error in $@
-        3) Captured STDOUT
-        4) Captured STDERR
-
-  regexp[=xism]
-    scalar => scalar
-
-    The "regexp" filter will turn your data section into a regular
-    expression object. You can pass in extra flags after an equals sign.
-
-    If the text contains more than one line and no flags are specified, then
-    the 'xism' flags are assumed.
-
-  get_url
-    scalar => scalar
-
-    The text is chomped and considered to be a url. Then LWP::Simple::get is
-    used to fetch the contents of the url.
-
-  exec_perl_stdout
-    list => scalar
-
-    Input Perl code is written to a temp file and run. STDOUT is captured
-    and returned.
-
-  yaml
-    scalar => list
-
-    Apply the YAML::Load function to the data block and use the resultant
-    structure. Requires YAML.pm.
-
-  dumper
-    scalar => list
-
-    Take a data structure (presumably from another filter like eval) and use
-    Data::Dumper to dump it in a canonical fashion.
-
-  strict
-    scalar => scalar
-
-    Prepend the string:
-
-        use strict; 
-        use warnings;
-
-    to the block's text.
-
-  base64_decode
-    scalar => scalar
-
-    Decode base64 data. Useful for binary tests.
-
-  base64_encode
-    scalar => scalar
-
-    Encode base64 data. Useful for binary tests.
-
-  escape
-    scalar => scalar
-
-    Unescape all backslash escaped chars.
+    Test::Base comes with large set of stock filters. They are in the
+    "Test::Base::Filter" module. See Test::Base::Filter for a listing and
+    description of these filters.
 
   Rolling Your Own Filters
     Creating filter extensions is very simple. You can either write a
     *function* in the "main" namespace, or a *method* in the
-    "Test::Base::Filter" namespace. In either case the text and any extra
-    arguments are passed in and you return whatever you want the new value
-    to be.
+    "Test::Base::Filter" namespace or a subclass of it. In either case the
+    text and any extra arguments are passed in and you return whatever you
+    want the new value to be.
 
     Here is a self explanatory example:
 
@@ -575,7 +445,7 @@ FILTERS
         }
         
         sub Test::Base::Filter::bar {
-            my $self = shift;
+            my $self = shift;       # The Test::Base::Filter object
             my $data = shift;
             my $args = $self->arguments;
             my $current_block_object = $self->block;
