--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.42
+date:    Tue Jun 14 09:31:25 PDT 2005
+changes:
+- Make any block method callable with a dummy AUTOLOAD
+---
 version: 0.41
 date:    Sun Jun 12 15:49:15 PDT 2005
 changes:
