--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.45
+date:    Mon Jan  9 20:58:04 PST 2006
+changes:
+- Let multilevel inheritance work!
+- no_diff function turns off diffing.
+---
 version: 0.44
 date:    Fri Jul 22 23:38:04 PDT 2005
 changes:
