--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.47
+date:    Thu Jan 19 10:59:37 PST 2006
+changes:
+- Depend on newer Spiffy 0.29
+---
 version: 0.46
 date:    Sat Jan 14 05:46:31 PST 2006
 changes:
