--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.48
+date:    Sun Jan 29 10:19:46 PST 2006
+changes:
+- Fixed test failures on windows
+---
 version: 0.47
 date:    Thu Jan 19 10:59:37 PST 2006
 changes:
