--- a/README
+++ b/README
@@ -25,11 +25,15 @@ SYNOPSIS
         plan tests => 1 * blocks;
     
         run_is input => 'expected';
+
+        sub local_filter {
+            s/my/your/;
+        }
     
         __END__
     
         === Test one (the name of the test)
-        --- input my_filter
+        --- input my_filter local_filter
         my
         input
         lines
