--- a/Changes
+++ b/Changes
@@ -1,4 +1,14 @@
 ---
+version: 0.50
+date:    Mon Jan 30 10:52:52 PST 2006
+changes:
+- No change. 0.49 got borked on the way to CPAN
+---
+version: 0.49
+date:    Mon Jan 30 10:52:48 PST 2006
+changes:
+- Added Module::Install::TestBase
+---
 version: 0.48
 date:    Sun Jan 29 10:19:46 PST 2006
 changes:
