--- a/README
+++ b/README
@@ -565,8 +565,27 @@ SUBCLASSING
     The first line in "some_func" allows it to be called as either a
     function or a method in the test code.
 
+DISTRIBUTION SUPPORT
+    You might be thinking that you do not want to use Test::Base in you
+    modules, because it adds an installation dependency. Fear not.
+    Module::Build takes care of that.
+
+    Just write a Makefile.PL that looks something like this:
+
+        use inc::Module::Install;
+
+        name            'Foo';
+        all_from        'lib/Foo.pm';
+
+        use_test_base;
+
+        WriteAll;
+
+    The line with "use_test_base" will automatically bundle all the code the
+    user needs to run Test::Base based tests.
+
 OTHER COOL FEATURES
-    Test::Base automatically adds
+    Test::Base automatically adds:
 
         use strict;
         use warnings;
