--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.52
+date:    Mon Jun 19 10:44:53 PDT 2006
+changes:
+- Add use_ok to exports
+---
 version: 0.51
 date:    Fri Jun 16 13:05:22 PDT 2006
 changes:
