--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.53
+date:    Wed Nov 29 15:21:02 PST 2006
+changes:
+- Changes from miyagawa and crew
+---
 version: 0.52
 date:    Mon Jun 19 10:44:53 PDT 2006
 changes:
