--- a/README
+++ b/README
@@ -632,8 +632,8 @@ AUTHOR
     Ingy döt Net <ingy@cpan.org>
 
 COPYRIGHT
-    Copyright (c) 2006, 2008, 2009, 2011. Ingy döt Net. Copyright (c) 2005.
-    Brian Ingerson.
+    Copyright (c) 2006, 2008, 2009, 2011, 2014. Ingy döt Net. Copyright (c)
+    2005. Brian Ingerson.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
