--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.63 Fri Aug  1 23:04:30 PDT 2014
+ - Switch to Zilla-Dist
+
 0.62 Mon Feb 10 14:45:04 PST 2014
  - Bad plan in a test
 
@@ -99,11 +102,13 @@
 
 0.37 Tue Jun  7 11:04:07 PDT 2005
  - Implement rking style diff_is
+ - Add filters `exec_perl_stdout`
 
 0.36 Sun Jun  5 11:49:54 PDT 2005
  - add tie_output support
  - suppress warning in accessor
  - support backslash escapes in filter arguments
+ - New filters `unchomp chop append eval_stdout eval_stderr eval_all`
  - Add join string to join filter
  - Add a Test-Less index
 
