Import of INGY/Test-Base-0.64 from CPAN.
gitpan-cpan-distribution: Test-Base
gitpan-cpan-version:      0.64
gitpan-cpan-path:         INGY/Test-Base-0.64.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.64 Fri Aug  1 23:16:11 PDT 2014
+ - Add Algorithm::Diff and Text::Diff to test.requires
+
 0.63 Fri Aug  1 23:04:30 PDT 2014
  - Switch to Zilla-Dist
 
