--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.65 Sat Aug  2 23:48:34 PDT 2014
+ - Fix copyright years.
+
 0.64 Fri Aug  1 23:16:11 PDT 2014
  - Add Algorithm::Diff and Text::Diff to test.requires
 
