--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.66 Mon Aug  4 00:39:44 PDT 2014
+ - Remove (c) from Copyright
+ - Ginish doc to Swim
+
 0.65 Sat Aug  2 23:48:34 PDT 2014
  - Fix copyright years.
 
