--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.67 Tue Aug  5 10:16:09 PDT 2014
+ - Add badges to doc
+
 0.66 Mon Aug  4 00:39:44 PDT 2014
  - Remove (c) from Copyright
  - Ginish doc to Swim
