Import of INGY/Test-Base-0.68 from CPAN.
gitpan-cpan-distribution: Test-Base
gitpan-cpan-version:      0.68
gitpan-cpan-path:         INGY/Test-Base-0.68.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/lib/Module/Install/TestBase.pod
+++ b/lib/Module/Install/TestBase.pod
@@ -37,11 +37,11 @@ no longer any burden on the person installing your module.
 
 =head1 AUTHOR
 
-ingy döt Net <ingy@cpan.org>
+ingy dÃ¶t Net <ingy@cpan.org>
 
 =head1 COPYRIGHT
 
-Copyright 2005-2014. Ingy döt Net.
+Copyright 2005-2014. Ingy dÃ¶t Net.
 
 This program is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
