--- a/README
+++ b/README
@@ -81,8 +81,9 @@ DESCRIPTION
     that you can write tests with a minimum of code. At the heart of all
     testing you have inputs, processes and expected outputs. Test::Base
     provides some clean ways for you to express your input and expected
-    output data, so you can spend your time focusing on that rather than
-    your code scaffolding.
+    output data, so you can spend your
+
+          time focusing on that rather than your code scaffolding.
 
 EXPORTED FUNCTIONS
     Test::Base extends Test::More and exports all of its functions. So you
@@ -383,7 +384,7 @@ TEST SPECIFICATION
     there is more than one block with ONLY, the first one will be chosen.
 
     Because ONLY is very useful for debugging and sometimes you forgot to
-    remove the ONLY flag before commiting to the VCS or uploading to CPAN,
+    remove the ONLY flag before committing to the VCS or uploading to CPAN,
     Test::Base by default gives you a diag message saying *I found ONLY ...
     maybe you're debugging?*. If you don't like it, use "no_diag_on_only".
 
