--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.72 Wed Aug  6 10:31:52 PDT 2014
+ - Dep on new Spiffy-0.40 to get rid of warnings on blead 5.21.x
+
 0.71 Wed Aug  6 09:50:04 PDT 2014
  - Applied PR/4 from schwern++
 
