--- a/README
+++ b/README
@@ -274,7 +274,7 @@ EXPORTED FUNCTIONS
         You can capture STDOUT and STDERR for operations with this function:
 
             my $out = '';
-            tie_output(*STDOUT, $buffer);
+            tie_output(*STDOUT, $out);
             print "Hey!\n";
             print "Che!\n";
             untie *STDOUT;
