--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.76 Thu Aug  7 00:29:39 PDT 2014
+ - Fix bad encoding in Pod
+
 0.75 Wed Aug  6 22:04:50 PDT 2014
  - Use PR/14 which makes old and new Test::Builders work. exodist++
 
