--- a/README
+++ b/README
@@ -636,10 +636,10 @@ HISTORY
     concept and usage of "chunks" to "blocks".
 
 AUTHOR
-    Ingy dÃ¶t Net <ingy@cpan.org>
+    Ingy döt Net <ingy@cpan.org>
 
 COPYRIGHT
-    Copyright 2005-2014. Ingy dÃ¶t Net.
+    Copyright 2005-2014. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
