--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.77 Fri Aug  8 12:39:43 PDT 2014
+ - Change Provider test to use string eval, keeping it out of the eyes of
+   Perl::Prereqs.
+
 0.76 Thu Aug  7 00:29:39 PDT 2014
  - Fix bad encoding in Pod
 
