--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.78 Sat Aug  9 00:23:58 PDT 2014
+ - Fix swim errors
+
 0.77 Fri Aug  8 12:39:43 PDT 2014
  - Change Provider test to use string eval, keeping it out of the eyes of
    Perl::Prereqs.
