Import of INGY/Test-Base-0.81 from CPAN.
gitpan-cpan-distribution: Test-Base
gitpan-cpan-version:      0.81
gitpan-cpan-path:         INGY/Test-Base-0.81.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.81 Sat Aug 16 02:52:12 PDT 2014
+ - Eliminate File::Basename from test/
+
 0.80 Fri Aug 15 20:49:55 PDT 2014
  - Add t/000-require-modules.t
 
