--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.84 Sat Aug 16 15:08:32 PDT 2014
+ - Remove .gitignore
+ - Fix Meta error. s/zild/=zild/
+
 0.83 Sat Aug 16 12:31:00 PDT 2014
  - Meta 0.0.2
 
