Import of INGY/Test-Base-0.85 from CPAN.
gitpan-cpan-distribution: Test-Base
gitpan-cpan-version:      0.85
gitpan-cpan-path:         INGY/Test-Base-0.85.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.85 Mon Aug 18 08:07:52 PDT 2014
+ - Pull Module::Install::TestBase out of Test::Base
+ - It will be released in separate dist
+ - Was causing Test::Base to fail tests
+
 0.84 Sat Aug 16 15:08:32 PDT 2014
  - Remove .gitignore
  - Fix Meta error. s/zild/=zild/
