--- a/README
+++ b/README
@@ -603,7 +603,7 @@ SUBCLASSING
 DISTRIBUTION SUPPORT
     You might be thinking that you do not want to use Test::Base in you
     modules, because it adds an installation dependency. Fear not.
-    Module::Install takes care of that.
+    Module::Install::TestBase takes care of that.
 
     Just write a Makefile.PL that looks something like this:
 
