Import of INGY/Test-Base-0.86 from CPAN.
gitpan-cpan-distribution: Test-Base
gitpan-cpan-version:      0.86
gitpan-cpan-path:         INGY/Test-Base-0.86.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.86 Mon Aug 18 08:29:20 PDT 2014
+ - Fix for issue/15
+
 0.85 Mon Aug 18 08:07:52 PDT 2014
  - Pull Module::Install::TestBase out of Test::Base
  - It will be released in separate dist
